--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,6 +11,8 @@
 @using Sistema_Guarderia.Models
 @using Radzen
 @using Radzen.Blazor
+@using System.Threading.Tasks
 @using Sistema_Guarderia.Extenciones
 @using Sistema_Guarderia.BLL
 @using Sistema_Guarderia.Contexto
+@using CurrieTechnologies.Razor.SweetAlert2
