--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -4,12 +4,12 @@
 
 <div class="page">
 
-    <div class="sidebar">
+    <div class="sidebar" style="animation: slideInUp 0.5s; animation-delay: 0.1s;">
         <NavMenu />
     </div>
 
     <main>
-        <article class="content px-4">
+        <article class="content px-4" style="animation: slideInUp 0.5s; animation-delay: 0.1s;">
             @Body
         </article>
     </main>
