--- a/Pages/Consultas/C_Clientes.razor
+++ b/Pages/Consultas/C_Clientes.razor
@@ -16,7 +16,7 @@
         </svg>
     </a>
 
-    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-reporte"
+    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-warning"
         style="position: absolute;  right:40px; margin-right: 30; " data-toggle="tooltip" data-placement="right"
         title="Reporte de Cliente" href="reporteInscripcion">
 
