--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,16 +1,4 @@
-﻿<style>
-    .circular-border {
-        border-radius: 5%;
-        overflow: hidden;
-    }
-
-    .circular-border {
-        border-radius: 5%;
-        overflow: hidden;
-    }
-</style>
-
-<div class="top-row ps-3 navbar navbar-dark">
+﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Sistema_Guarderia</a>
     </div>
@@ -21,7 +9,7 @@
     <div class="nav-item px-3">
         <RadzenPanelMenu class="flex-column" style="font-size: 12px; border: 1px solid #ccc; border-radius: 5px; padding: 5px; animation: slideInRight 0.5s; animation-delay: 0.1s;"> 
             <div class="nav-item px-3">
-                <RadzenPanelMenuItem Text="Inscripcion" Icon="home"
+                <RadzenPanelMenuItem Text="Inscripcion" Icon="list"
                     style="font-size: 12px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
                     <RadzenPanelMenuItem Text="Registro" Path="R_Inscripcion"
                         style="font-size: 10px; border: 1px solid #ccc; border-radius: 2px; padding: 5px;" />
@@ -30,7 +18,7 @@
                 </RadzenPanelMenuItem>
             </div>
             <div class="nav-item px-3">
-                <RadzenPanelMenuItem Text="Clientes" Icon="home"
+                <RadzenPanelMenuItem Text="Clientes" Icon="people"
                     style="font-size: 12px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
                     <RadzenPanelMenuItem Text="Registro" Path="R_Clientes"
                         style="font-size: 10px; border: 1px solid #ccc; border-radius: 2px; padding: 5px;" />
@@ -55,7 +43,7 @@
 @code {
     private bool collapseNavMenu = true;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
+    private string? activeMenuItem = null;
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
