--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="Sistema_Guarderia.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
