--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -1,9 +1,44 @@
 .page {
-  padding-top: 20px; /*Posicionar 20 pixeles hacia abajo*/
+  padding-top: 20px;
   position: relative;
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(180deg, rgb(5, 103, 87) 0%, #084b97 70%);
+  overflow: hidden;
+}
+
+.page::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background: linear-gradient(-45deg, transparent 40%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.5) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.5) 80%, rgba(255, 255, 255, 0.5) 100%);
+  transform: scaleY(-1);
+  animation: wave-animation 2s linear infinite alternate;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: scaleY(-1) translateY(0);
+  }
+
+  100% {
+    transform: scaleY(-1) translateY(-50px);
+  }
+}
+
+.page::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background: linear-gradient(45deg, transparent 40%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.5) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.5) 80%, rgba(255, 255, 255, 0.5) 100%);
+  transform: scaleX(-1);
+  animation: wave-animation 2s linear infinite alternate;
 }
 
 .container {
@@ -27,12 +62,29 @@ main {
   border: 4px solid rgb(143, 141, 141);
   border-radius: 5ch;
   overflow: hidden;
-  position: absolute;  /*Posicion apsoluta*/
-  left: 30px; /*Posicionar 30 pixeles hacia la derecha*/
+  position: relative;
+  transition: all 0.5s ease;
+  left: 10px;
+  z-index: 1; /* Asegura que el sidebar esté detrás del contenido */
+
+  /* Cambia el tamaño del sidebar ajustando width y height */
+  width: 100px; /* Cambia este valor según lo que necesites */
+  height: 500px; /* Cambia este valor según lo que necesites */
+
+  /* Cambia el tamaño del contenido interno, como el icono */
+  font-size: 10px; /* Cambia este valor según lo que necesites */
 }
 
 .sidebar-content {
   padding: 10px;
+}
+
+/* Estilos para el contenido en el main */
+.content {
+  position: relative;
+  z-index: 2; /* Asegura que el contenido esté por encima del sidebar */
+  animation: slideInUp 0.5s;
+  animation-delay: 0.1s;
 }
 
 .border-side {
