--- a/Shared/LoginDisplay.razor
+++ b/Shared/LoginDisplay.razor
@@ -1,12 +1,26 @@
-﻿<AuthorizeView>
-    <Authorized>
-        <a href="Identity/Account/Manage">Hello, @context.User.Identity?.Name!</a>
-        <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
-        </form>
-    </Authorized>
-    <NotAuthorized>
-        <a href="Identity/Account/Register">Register</a>
-        <a href="Identity/Account/Login">Log in</a>
-    </NotAuthorized>
-</AuthorizeView>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+<div Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
+    <AuthorizeView>
+        <Authorized>    
+            <a method="get" href="Identity/Account/Manage" class="oi oi-person text-primary nav-link btn btn-link"> Perfil</a>
+            <form method="post" action="Identity/Account/LogOut">
+                <button type="submit" class="oi oi-account-logout  text-primary nav-link btn btn-link" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
+                    <i class="fa fa-sign-out" aria-hidden="true"></i> Cerrar seccion</button>
+            </form>
+        </Authorized>
+        <NotAuthorized>
+            <div class="center-container">
+                <a type="button" class="btn btn-success h3" href="Identity/Account/Login"
+                    Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">Iniciar seccion</a>
+                <h5>
+                    <br />
+                    <br>
+                    No tienes una cuenta?<a class="h5" href="Identity/Account/Register"
+                        Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">Registrate.</a>
+                </h5>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
+</div>
+
