--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -3,8 +3,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(180deg, rgb(5, 103, 87) 0%, #084b97 70%);
-  overflow: hidden;
+  background-image: linear-gradient(180deg, rgb(5, 23, 103) 0%, #089767 70%);
+  overflow: hidden; 
 }
 
 .page::before {
@@ -17,6 +17,7 @@
   background: linear-gradient(-45deg, transparent 40%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.5) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.5) 80%, rgba(255, 255, 255, 0.5) 100%);
   transform: scaleY(-1);
   animation: wave-animation 2s linear infinite alternate;
+  border-radius: 50px;
 }
 
 @keyframes wave-animation {
@@ -39,6 +40,55 @@
   background: linear-gradient(45deg, transparent 40%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.5) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.5) 80%, rgba(255, 255, 255, 0.5) 100%);
   transform: scaleX(-1);
   animation: wave-animation 2s linear infinite alternate;
+  border-radius: 50px;
+}
+
+.row {
+  padding-top: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(180deg, rgb(5, 103, 87) 0%, #084b97 70%);
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  shape-outside: margin-box 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.row::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background: linear-gradient(-45deg, transparent 40%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.5) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.5) 80%, rgba(255, 255, 255, 0.5) 100%);
+  transform: scaleY(-1);
+  animation: wave-animation 2s linear infinite alternate;
+  border-radius: 50px;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: scaleY(-1) translateY(0);
+  }
+
+  100% {
+    transform: scaleY(-1) translateY(-50px);
+  }
+}
+
+.row::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background: linear-gradient(45deg, transparent 40%, rgba(255, 255, 255, 0.5) 40%, rgba(255, 255, 255, 0.5) 60%, transparent 60%, transparent 80%, rgba(255, 255, 255, 0.5) 80%, rgba(255, 255, 255, 0.5) 100%);
+  transform: scaleX(-1);
+  animation: wave-animation 2s linear infinite alternate;
+  border-radius: 50px;
 }
 
 .container {
@@ -57,7 +107,7 @@ main {
   animation-duration: 1s;
 }
 
-.sidebar { 
+.sidebar {
   background-image: linear-gradient(180deg, rgb(78, 27, 119) 0%, #221279 70%);
   border: 4px solid rgb(143, 141, 141);
   border-radius: 5ch;
@@ -65,14 +115,10 @@ main {
   position: relative;
   transition: all 0.5s ease;
   left: 10px;
-  z-index: 1; /* Asegura que el sidebar esté detrás del contenido */
-
-  /* Cambia el tamaño del sidebar ajustando width y height */
-  width: 100px; /* Cambia este valor según lo que necesites */
-  height: 500px; /* Cambia este valor según lo que necesites */
-
-  /* Cambia el tamaño del contenido interno, como el icono */
-  font-size: 10px; /* Cambia este valor según lo que necesites */
+  z-index: 1;
+  width: 100px;
+  height: 500px;
+  font-size: 10px;
 }
 
 .sidebar-content {
@@ -94,16 +140,34 @@ main {
 }
 
 .top-row {
-  background-color: #dadada;
-  border-bottom: 1px solid #dfdddf;
-  justify-content: flex-end;
-  height: 3.5rem;
+  background-color: #fffafa;
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  margin-left: auto; /* Ajusta el margen izquierdo para centrar el elemento horizontalmente */
+  border-radius: 50px;
+  z-index: 1; /* Ajusta el z-index para que el top-row esté por encima de otros elementos */
+  overflow: hidden;
+  width: 180px;
+  height: 70px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  border: 3px solid #9b36afd3;
+  shape-outside: margin-box 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+.expanded {
+  width: 200px;
+  height: 200px;
+}
 .top-row ::deep a,
 .top-row .btn-link {
+  white-space: nowrap;
+  margin-left: 1.5rem;
+}
+
+.center-row ::deep a,
+.center-row .btn-link {
   white-space: nowrap;
   margin-left: 1.5rem;
 }
@@ -115,6 +179,35 @@ main {
 .top-row a:first-child {
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 300px; /* Asegura que el contenedor ocupe al menos el alto especificado */
+  border-radius: 30px; /* Redondea las esquinas del contenedor */
+  overflow: hidden; /* Evita que el contenido se desborde */
+}
+
+.container .center-content {
+  text-align: center; /* Centrar contenido en horizontal */
+  margin: auto; /* Centrar contenido en horizontal */
+}
+
+.contain {
+  display: flex;
+  justify-content:end;
+  margin-top: 0px;
+  align-items:end;
+  min-height: 300px; /* Asegura que el contenedor ocupe al menos el alto especificado */
+  border-radius: 30px; /* Redondea las esquinas del contenedor */
+  overflow: hidden; /* Evita que el contenido se desborde */
+}
+
+.contain .center-content {
+  text-align: center; /* Centrar contenido en horizontal */
+  margin-top: 0px; /* Centrar contenido en horizontal */
 }
 
 @media (max-width: 640.98px) {
@@ -130,6 +223,75 @@ main {
   .top-row .btn-link {
     margin-left: 0;
   }
+
+  .center-row:not(.auth) {
+    display: none;
+  }
+
+  .center-row.auth {
+    justify-content: space-between;
+  }
+
+  .center-row a,
+  .center-row .btn-link {
+    margin-left: 0;
+  }
+}
+
+.center-row {
+  margin-top: 80px;
+  background-color: #fffafa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto; /* Ajusta el margen izquierdo para centrar el elemento horizontalmente */
+  margin-right: 51px; /* Ajusta el margen derecho para centrar el elemento horizontalmente */
+  margin-bottom: 129px;
+  border-radius: 100px;
+  overflow: hidden;
+  width: 500px;
+  height: 400px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  border: 2px solid #dddddd;
+}
+
+.h3 {
+  font-size: 24px;
+  color: #333333;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 10px;
+}
+
+.h5 {
+  font-size: 18px;
+  color: #333333;
+  text-align: center;
+  margin: 0;
+  padding: 10px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
 }
 
 @media (min-width: 641px) {
@@ -137,18 +299,31 @@ main {
     flex-direction: row;
   }
 
+  .center-row {
+    flex-direction: row;
+  }
+
+  .row {
+    flex-direction: row;
+  }
+
   .sidebar {
-    width: 250px;
+    width: 200px;
     height: 100vh;
     position: sticky;
     top: 0;
   }
 
   .top-row {
+    position: relative;
+    top: 0;
+    z-index: 1;
+  }
+
+  .center-row {
     position: sticky;
     top: 0;
     z-index: 1;
-    position: relative;
   }
 
   .top-row,
@@ -156,4 +331,4 @@ main {
     padding-left: 2rem !important;
     padding-right: 1.5rem !important;
   }
-}
+} 
