Repair custom commit

--- a/Pages/Inicio.razor
+++ b/Pages/Inicio.razor
@@ -20,7 +20,8 @@
                 Title = "Bienvenido!",
                 Text = "Este sistema te ayudara a tener un mayor control de tu guarderia",
                 Icon = SweetAlertIcon.Success,
-                ShowCancelButton = false
+                ShowCancelButton = false,
+                HeightAuto = true
             });
         }
     }
