--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -9,9 +9,8 @@
             <div class="sidebar" style="animation: slideInUp 0.5s; animation-delay: 0.1s;">
                 <NavMenu />
             </div>
-
             <main>
-                <div class="top-row px-1">
+                <div class="top-row px-4">
                     <LoginDisplay />
                 </div>
                 <article class="content px-4">
@@ -20,13 +19,11 @@
             </main>
         </Authorized>
         <NotAuthorized>
-            
-                <div class="container row" Style="animation: slideInLeft 0.9s; animation-delay: 0.2s; margin-right:303px; margin-left:303px">
-                    <div class="center-row px-1">
-                        <LoginDisplay />
-                    </div>
+            <div class="container row" Style="animation: slideInUp 0.9s; animation-delay: 0.2s; margin-right:303px; margin-left:303px">
+                <div class="center-row px-1">
+                    <LoginDisplay />
                 </div>
-            
+            </div>
         </NotAuthorized>
     </AuthorizeView>
 </div>
